; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-index.c_search_encode_list.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-index.c_search_encode_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.search_index_word = type { i32, i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, %struct.search_index_word*, i32*, i32)* @search_encode_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @search_encode_list(i32* %0, i32 %1, %struct.search_index_word* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.search_index_word*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store %struct.search_index_word* %2, %struct.search_index_word** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load %struct.search_index_word*, %struct.search_index_word** %8, align 8
  %15 = getelementptr inbounds %struct.search_index_word, %struct.search_index_word* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  %16 = load %struct.search_index_word*, %struct.search_index_word** %8, align 8
  %17 = getelementptr inbounds %struct.search_index_word, %struct.search_index_word* %16, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load %struct.search_index_word*, %struct.search_index_word** %8, align 8
  %19 = getelementptr inbounds %struct.search_index_word, %struct.search_index_word* %18, i32 0, i32 3
  store i64 0, i64* %19, align 8
  %20 = load i32, i32* %7, align 4
  %21 = icmp sgt i32 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  store i32 0, i32* %11, align 4
  br label %24

24:                                               ; preds = %36, %5
  %25 = load i32, i32* %7, align 4
  %26 = icmp sgt i32 %25, 0
  br i1 %26, label %27, label %39

27:                                               ; preds = %24
  %28 = load i32, i32* %7, align 4
  %29 = add nsw i32 %28, -1
  store i32 %29, i32* %7, align 4
  %30 = load i32*, i32** %6, align 8
  %31 = call i64 @in_title(i32* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %36

33:                                               ; preds = %27
  %34 = load i32, i32* %11, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %11, align 4
  br label %36

36:                                               ; preds = %33, %27
  %37 = load i32*, i32** %6, align 8
  %38 = getelementptr inbounds i32, i32* %37, i32 1
  store i32* %38, i32** %6, align 8
  br label %24

39:                                               ; preds = %24
  %40 = load %struct.search_index_word*, %struct.search_index_word** %8, align 8
  %41 = getelementptr inbounds %struct.search_index_word, %struct.search_index_word* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  store i32 %42, i32* %7, align 4
  %43 = load i32, i32* %7, align 4
  %44 = load i32*, i32** %6, align 8
  %45 = sext i32 %43 to i64
  %46 = sub i64 0, %45
  %47 = getelementptr inbounds i32, i32* %44, i64 %46
  store i32* %47, i32** %6, align 8
  %48 = load i32, i32* %11, align 4
  %49 = load %struct.search_index_word*, %struct.search_index_word** %8, align 8
  %50 = getelementptr inbounds %struct.search_index_word, %struct.search_index_word* %49, i32 0, i32 1
  store i32 %48, i32* %50, align 4
  store i32 0, i32* %12, align 4
  %51 = load i32*, i32** %6, align 8
  %52 = load i32, i32* %7, align 4
  %53 = load i32, i32* %7, align 4
  %54 = load %struct.search_index_word*, %struct.search_index_word** %8, align 8
  %55 = load i32*, i32** %9, align 8
  %56 = getelementptr inbounds i32, i32* %55, i64 0
  %57 = load i32, i32* %56, align 4
  %58 = load i32, i32* %10, align 4
  %59 = call i64 @search_encode_core(i32* %51, i32 %52, i32 %53, %struct.search_index_word* %54, i32 0, i32 %57, i32 %58)
  %60 = load i32, i32* %12, align 4
  %61 = sext i32 %60 to i64
  %62 = add nsw i64 %61, %59
  %63 = trunc i64 %62 to i32
  store i32 %63, i32* %12, align 4
  %64 = load i32*, i32** %6, align 8
  %65 = load i32, i32* %7, align 4
  %66 = load i32, i32* %11, align 4
  %67 = load %struct.search_index_word*, %struct.search_index_word** %8, align 8
  %68 = load i32*, i32** %9, align 8
  %69 = getelementptr inbounds i32, i32* %68, i64 1
  %70 = load i32, i32* %69, align 4
  %71 = load i32, i32* %10, align 4
  %72 = call i64 @search_encode_core(i32* %64, i32 %65, i32 %66, %struct.search_index_word* %67, i32 1, i32 %70, i32 %71)
  %73 = load i32, i32* %12, align 4
  %74 = sext i32 %73 to i64
  %75 = add nsw i64 %74, %72
  %76 = trunc i64 %75 to i32
  store i32 %76, i32* %12, align 4
  %77 = load i32, i32* %12, align 4
  ret i32 %77
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @in_title(i32*) #1

declare dso_local i64 @search_encode_core(i32*, i32, i32, %struct.search_index_word*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
